--- a/EC/Apps/forum/templates/forum_index.html
+++ b/EC/Apps/forum/templates/forum_index.html
@@ -47,21 +47,20 @@
             <div class="row">
                 <div class="col-md-9">
                     <div id="main">
-
                         <input id="tab1" type="radio" name="tabs" checked>
-                        <label for="tab1">Recently Published</label>
+                        <label for="tab1">Riddles</label>
 
                         <input id="tab2" type="radio" name="tabs">
-                        <label for="tab2">Most Commented</label>
+                        <label for="tab2">Share Sth. Intersting</label>
 
                         <input id="tab3" type="radio" name="tabs">
-                        <label for="tab3">Most Liked</label>
+                        <label for="tab3">Ask For Help</label>
 
                         <input id="tab4" type="radio" name="tabs">
-                        <label for="tab4">No Comment</label>
+                        <label for="tab4">Find Friends</label>
                         
                         <input id="tab5" type="radio" name="tabs">
-                        <label for="tab5">Riddles</label>
+                        <label for="tab5">Else</label>
 
                         <!-- 这个是用来写分享 -->
                         <input id="tab6" name="tabs" onclick="window.location.href='{% url 'forum:share' %}'">
