forum progressed vastly

--- a/EC/Apps/forum/templates/forum_index.html
+++ b/EC/Apps/forum/templates/forum_index.html
@@ -68,47 +68,53 @@
                         
                         <!-- 从这里开始是下面的主要内容 -->
 
-                        {% for single_page in all_contents %}
+                        {% for single_page in contents %}
+                        <!-- 一个single——page对应一个完整的主题 -->
                         <section id="content{{single_page.0}}">
-                            <!--Recent Question Content Section -->
-                            {% for single_post in single_page%}
-                                <div class="question-type2033">
-                                    <div class="row">
-                                        <div class="col-md-1">
-                                            <div class="left-user12923 left-user12923-repeat">
-                                                <a href="#"><img src="{% static 'imgs/images.png' %}" alt="image"> </a>
-                                                <a href="{% url 'forum:post_detail' %}><i class="fa fa-check" aria-hidden="true"></i></a> 
-                                            </div>
-                                        </div>
-                                        <div class="col-md-9">
-                                            <div class="right-description893">
-                                                <div id="que-hedder2983">
-                                                    <h3><a href="{% url 'forum:post_detail' %}">Why Do You Want to Work at This Company?</a></h3> </div>
-                                                <div class="ques-details10018">
-                                                    <p>{{i}}Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
-                                                </div>
-                                                <hr>
-                                                <div class="ques-icon-info3293"> 
-                                                    <a href="#"><i class="fa fa-star" aria-hidden="true"> 5 </i> </a> 
-                                                    {% comment %} <a href="#"><i class="fa fa-folder" aria-hidden="true"> wordpress</i> {% endcomment %}
-                                                    </a> <a href="#"><i class="fa fa-clock-o" aria-hidden="true"> 4 min ago</i></a> 
-                                                    <a href="#"><i class="fa fa-question-circle-o" aria-hidden="true"> Question</i></a> 
-                                                    <a href="#"><i class="fa fa-bug" aria-hidden="true"> Report</i></a> </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-2">
-                                            <div class="ques-type302">
-                                                <a href="{% url 'forum:post_detail' %}>
-                                                    <button type="button" class="q-type238"><i class="fa fa-comment" aria-hidden="true"> 333335 answer</i></button>
-                                                </a>
-                                                <a href="{% url 'forum:post_detail' %}" >
-                                                    <button type="button" class="q-type23 button-ques2973"> <i class="fa fa-user-circle-o" aria-hidden="true"> 70 view</i> </button>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
+                        <!--Recent Question Content Section -->
+
+
+        {% for single_post in single_page.1 %}
+        <div class="question-type2033">
+            <div class="row">
+                <div class="col-md-1">
+                    <div class="left-user12923 left-user12923-repeat">
+                        <a href="#"><img src="{% static 'imgs/images.png' %}" alt="image"> </a>
+                        <a href="{% url 'forum:post_detail' post_id=single_post.id %}"><i class="fa fa-check" aria-hidden="true"></i></a> 
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="right-description893">
+                        <div id="que-hedder2983">
+                            <h3><a href="{% url 'forum:post_detail' post_id=single_post.id %}">{{ single_post.post_title }}</a></h3>
+                        </div>
+                        <div class="ques-details10018">
+                            <p>{{ single_post.post_detail }}.</p>
+                        </div>
+                        <hr>
+                        <div class="ques-icon-info3293">
+                            <a href="#"><i class="fa fa-star" aria-hidden="true"> {{ single_post.post_likes }} </i> </a>
+                            <a href="#"><i class="fa fa-clock-o" aria-hidden="true"> {{ single_post.publish_date }} </i></a>
+                            <a href="#"><i class="fa fa-question-circle-o" aria-hidden="true"> {{ single_post.theme }} </i></a>
+                            <a href="#"><i class="fa fa-bug" aria-hidden="true"> Report</i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="ques-type302">
+                        <a href="{% url 'forum:post_detail' post_id=single_post.id %}">
+                            <button type="button" class="q-type238"><i class="fa fa-comment" aria-hidden="true"> {{single_post.comments}} comments </i></button>
+                        </a>
+                        <a href="{% url 'forum:post_detail' post_id=single_post.id %}">
+                            <button type="button" class="q-type23 button-ques2973"><i class="fa fa-user-circle-o" aria-hidden="true"> {{single_post.likes}} likes </i></button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+
+
                             <nav aria-label="Page navigation">
                                 <ul class="pagination">
                                   <li>
