--- a/EC/Apps/forum/templates/post_details.html
+++ b/EC/Apps/forum/templates/post_details.html
@@ -68,7 +68,7 @@
                         </div>
 
                         <div class="post-details-info1982">
-                            <p>{{post_content.post_detail}}</p>                            
+                            <div>{{post_content.post_detail|safe}}</div>                            
                             <hr>
 
                             <div class="post-footer29032">
