--- a/EC/Apps/forum/templates/share.html
+++ b/EC/Apps/forum/templates/share.html
@@ -16,17 +16,17 @@
 </head>
 
 <body>
-    <!--
     <section class="header-descriptin329">
         <div class="container">
-            <h3>Share Something Interesting</h3>
+            <h3 style="color: yellow: ">Share Something Interesting</h3>
             <ol class="breadcrumb breadcrumb839">
                 <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'forum:forum_index' %}">Forum</a></li>
                 <li class="active">Share</li>
             </ol>
         </div>
     </section>
-    -->
+
 
     <section class="main-content920">
         <div class="container">
