--- a/EC/templates/index.html
+++ b/EC/templates/index.html
@@ -39,7 +39,7 @@
 
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://young.ustc.edu.cn/">
+                  <a class="nav-link" href="https://young.ustc.edu.cn/" target="_blank">
                     <i class="iconfont icon-archive-fill"></i>
                     <span>Activities</span>
                   </a>
@@ -131,7 +131,7 @@
               <div class="img-icon">
                 <a href="https://young.ustc.edu.cn/">
                   <figure class="img-container">
-                    <img src="./static/imgs/icons/icon004.png" alt="Activities" width="120">
+                    <img src="./static/imgs/icons/icon004.png" alt="Activities" width="120" target="_blank">
                     <figcaption>Activities</figcaption>
                     </figure>
                 </a>
