admin panel begin

--- a/EC/templates/index.html
+++ b/EC/templates/index.html
@@ -147,10 +147,10 @@
               </div>
 
               <div class="img-icon">
-                <a href="{% url 'forum:forum_index' %}">
+                <a href="{% url 'admin_panel:dashboard' %}">
                   <figure class="img-container">
                     <img src="./static/imgs/icons/icon006.png" alt="Administrator" width="120">
-                    <figcaption>Administrator</figcaption>
+                    <figcaption>Admin Panel</figcaption>
                     </figure>
                 </a>
               </div>
