--- a/EC/Apps/admin_panel/templates/dashboard.html
+++ b/EC/Apps/admin_panel/templates/dashboard.html
@@ -70,13 +70,13 @@
                         <div class="column-block">
                             <div class="column-block-header column-success">
                                 <h2>Accounts</h2>
-                                <span class="column-block-info">1000 <span>in all</span></span>
+                                <span class="column-block-info">{{ total_accounts }}<span>in all</span></span>
                             </div>
 
                             <ul class="column-block-list">
-                                <li>Today <span class="buble-success button-small pull-right">100</span></li>
-                                <li>Yesterday <span class="buble-secondary button-small pull-right">1000</span></li>
-                                <li>Total <span class="buble-warning button-small pull-right">10000</span></li>
+                                <li>Today <span class="buble-success button-small pull-right">{{ accounts_today }}</span></li>
+                                <li>Yesterday <span class="buble-secondary button-small pull-right">{{ accounts_yesterday }}</span></li>
+                                <li>Total <span class="buble-warning button-small pull-right">{{ total_accounts }}</span></li>
                             </ul>
                         </div>
                     </div>
@@ -85,12 +85,13 @@
                         <div class="column-block">
                             <div class="column-block-header column-warning">
                                 <h2>Posts</h2>
-                                <span class="column-block-info">1000 <span>in all</span></span>
+                                <span class="column-block-info">{{ total_posts }}<span>in all</span></span>
                             </div>
                             <ul class="column-block-list">
-                                <li>Today <span class="buble-success button-small pull-right">100</span></li>
-                                <li>Yesterday <span class="buble-secondary button-small pull-right">1000</span></li>
-                                <li>Total <span class="buble-warning button-small pull-right">10000</span></li>
+                                <li>Today <span class="buble-success button-small pull-right">{{ posts_today }}</span></li>
+                                <li>Yesterday <span class="buble-secondary button-small pull-right">{{ posts_yesterday }}</span></li>
+                                <li>Total <span class="buble-warning button-small pull-right">{{ total_posts }}</span></li>
+                            </ul>
                             </ul>
                         </div>
                     </div>
@@ -98,13 +99,13 @@
                     <div class="pure-u-1 pure-u-md-1-3">
                         <div class="column-block">
                             <div class="column-block-header">
-                                <h2>Likes</h2>
-                                <span class="column-block-info">1000 <span>in all</span></span>
+                                <h2>Comments</h2>
+                                <span class="column-block-info">{{ total_comments }}<span>in all</span></span>
                             </div>
                             <ul class="column-block-list">
-                                <li>Today <span class="buble-success button-small pull-right">100</span></li>
-                                <li>Yesterday <span class="buble-secondary button-small pull-right">1000</span></li>
-                                <li>Total <span class="buble-warning button-small pull-right">10000</span></li>
+                                <li>Today <span class="buble-success button-small pull-right">{{ comments_today }}</span></li>
+                                <li>Yesterday <span class="buble-secondary button-small pull-right">{{ comments_yesterday }}</span></li>
+                                <li>Total <span class="buble-warning button-small pull-right">{{ total_comments }}</span></li>
                             </ul>
                         </div>
                     </div>
@@ -112,60 +113,52 @@
                 </div>
 
                 <div class="pure-g">
-                    <div class="pure-u-1 pure-u-md-1-3">
+                    <div class="pure-u-1 pure-u-md-3-3">
+                        <h2>Latest Posts</h2>
                         <div class="column-block">
                             <table class="pure-table pure-table-horizontal">
                                 <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Title</th>
-                                    <th>Status</th>
-                                </tr>
+                                    <tr>
+                                        <th>Title</th>
+                                        <th>Theme</th>
+                                        <th>Publish Date</th>
+                                        <th>Likes</th>
+                                    </tr>
                                 </thead>
-
                                 <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Post Title 1</td>
-                                    <td>Active</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Post Title 2</td>
-                                    <td>Draft</td>
-                                </tr>
+                                    {% for post in latest_posts %}
+                                    <tr>
+                                        <td>{{ post.post_title }}</td>
+                                        <td>{{ post.theme }}</td>
+                                        <td>{{ post.publish_date }}</td>
+                                        <td>{{ post.post_likes }}</td>
+                                    </tr>
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
                     </div>
-                    <div class="pure-u-1 pure-u-md-2-3">
+                    <div class="pure-u-1 pure-u-md-3-3">
+                        <h2>Latest Comments</h2>
                         <div class="column-block">
                             <table class="pure-table pure-table-horizontal">
                                 <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Full Name</th>
-                                    <th>Email</th>
-                                    <th>Role</th>
-                                    <th>Status</th>
-                                </tr>
+                                    <tr>
+                                        <th>Post</th>
+                                        <th>User</th>
+                                        <th>Content</th>
+                                        <th>Comment Date</th>
+                                    </tr>
                                 </thead>
-
                                 <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Full Name 1</td>
-                                    <td>nickname1@domain.local</td>
-                                    <td>User</td>
-                                    <td>Active</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Full Name 2</td>
-                                    <td>nickname2@domain.local</td>
-                                    <td>Moderator</td>
-                                    <td>Awaiting</td>
-                                </tr>
+                                    {% for comment in latest_comments %}
+                                    <tr>
+                                        <td>{{ comment.post }}</td>
+                                        <td>{{ comment.user }}</td>
+                                        <td>{{ comment.content }}</td>
+                                        <td>{{ comment.comment_date }}</td>
+                                    </tr>
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
